Updated to inlcude correct Dockerhub name

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -75,8 +75,8 @@ jobs:
        with:
          push: true
          tags: |
-           am3696-dev/assignment8:latest
-           am3696-dev/assignment8:${{ github.sha }}
+           am3696/assignment8:latest
+           am3696/assignment8:${{ github.sha }}
          platforms: linux/amd64,linux/arm64
-         cache-from: type=registry,ref=am3696-dev/assignment8:cache
+         cache-from: type=registry,ref=am3696/assignment8:cache
          cache-to: type=inline,mode=max
