--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,7 @@ exceptiongroup==1.2.2
 fastapi==0.115.4
 greenlet==3.1.1
 h11>=0.16.0
-httpcore==1.0.6
-httpx==0.27.2
+httpx>=0.27.2
 idna==3.10
 iniconfig==2.0.0
 isort==5.13.2
@@ -36,4 +35,4 @@ tomli==2.0.2
 tomlkit==0.13.2
 typing_extensions==4.12.2
 urllib3==2.2.3
-uvicorn==0.32.0
+uvicorn>=0.32.0
